@@ -1,16 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST rack-openid-1.2.0.gem 7680 RMD160 c81e7bb1bd78c9eebc308ae2537143e76c825dc8 SHA1 b2b9d03bf50db2985a955c3be8e34725d95dcce8 SHA256 76a0980564f2e884a30aec545f91c4ceae175ba0bbec78f9425d7b7c85dfc514
 DIST rack-openid-1.3.1.gem 7680 RMD160 164b77c3ca2ed299ba4d3d5e822b7f02f45e4f92 SHA1 609fd0ad6daa8dc751ec4dd6191f99d43013f5bf SHA256 1b3a30ed9840e9cf1f3e28a524badfb8796519322e3f9d82b7a49c70b1832537
-EBUILD rack-openid-1.2.0.ebuild 604 RMD160 5edbf51dd3c9c37e18bac9eed9b0b6b159731052 SHA1 0cf36646af6d01ccc3143dcb078aaa0e790c77ff SHA256 775e12eac365bc4d17aadfcc128e44eb9e8fbb1740dfcdb4b49adc93014d7b5a
-EBUILD rack-openid-1.3.1.ebuild 604 RMD160 5edbf51dd3c9c37e18bac9eed9b0b6b159731052 SHA1 0cf36646af6d01ccc3143dcb078aaa0e790c77ff SHA256 775e12eac365bc4d17aadfcc128e44eb9e8fbb1740dfcdb4b49adc93014d7b5a
-MISC ChangeLog 852 RMD160 23807411abc8f2789a815220eda339afcc141253 SHA1 ba9e2199241eba1a5b07558a5a0f20930aee9128 SHA256 b185e40212da594a8050cb00ac6c4188f2b6ec91fce3324ca68ec0bd50e3a87d
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk4EoU8ACgkQrnu0mw69JkpTswD/c2Yofrqzn5ugO/ARA8OxsGo8
-711LBfzi2H8HniQn1T8A/0GhS+Uf7i85ucy9t8q2jyO3KEwFBXyJNYZ6PBSDamHg
-=DRao
+iF4EAREIAAYFAk+hRZQACgkQiIP6VqMIqNegeQD/dzMGTllgs5vnDbEeHZ1298PM
+MeMqJK4Rg94SBV0LQD8A/08AuBOXE/xU6pecqHj1Smoc50IV9RDPSJHHkdmFhHyc
+=vYGH
 -----END PGP SIGNATURE-----
