@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rack-openid
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 May 2012; Hans de Graaff <graaff@gentoo.org> -rack-openid-1.2.0.ebuild:
+  Remove old version.
 
 *rack-openid-1.3.1 (24 Jun 2011)
 
